# FastArena

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  README.md  bench_frame_pattern.cpp  bench_frame_pattern_simple.cpp  bench_mixed_sizes.cpp  bench_mixed_sizes_simple.cpp  bench_small_fixed.cpp  bench_small_fixed_simple.cpp
cmake/: FastArenaConfig.cmake.in
examples/: 01_basic_allocate_reset.cpp  02_marker_rollback_frame.cpp  03_stl_allocator_vector.cpp  04_pmr_vector_string.cpp  05_stats_and_growth.cpp  06_linux_mmap_backing.cpp  07_tls_arena_multithread.cpp  08_marker_invalid_cases.cpp  09_pmr_upstream_fallback.cpp  10_alignment_contract.cpp  smoke.cpp
include/: arena.hpp
src/: arena.cpp
tests/: CMakeLists.txt  arena_tests.cpp
